Bug fix: better validation for login form. Should work on mobile safari now too.

--- a/app/css/login.scss
+++ b/app/css/login.scss
@@ -13,9 +13,13 @@
   form {
     max-width: rem-calc(600px);
   }
-  input {
+  input[type="email"], input[type="password"] {
     background: $black;
     border: none;
     color: $white;
+  }
+  input {
+    margin-bottom: 0;
+    margin-top: rem-calc(16px);
   }
 }
